Working with font-size and pixels

--- a/CSS: The Basics/4. Common Text Properties/app.css
+++ b/CSS: The Basics/4. Common Text Properties/app.css
@@ -3,6 +3,11 @@ h1 {
     font-weight: 900;
     text-decoration: underline wavy orangered;
     letter-spacing: 8px;
+    font-size: 60px;
+}
+
+h2 {
+    font-size: 30px;
 }
 
 p {
