--- a/CSS: The Basics/4. Common Text Properties/app.css
+++ b/CSS: The Basics/4. Common Text Properties/app.css
@@ -4,6 +4,7 @@ h1 {
     text-decoration: underline wavy orangered;
     letter-spacing: 8px;
     font-size: 60px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 h2 {
