The Adjacent & Direct-Descendant Selectors

--- a/CSS: Selectors/1. Universal & Element Selectors/app.css
+++ b/CSS: Selectors/1. Universal & Element Selectors/app.css
@@ -31,6 +31,15 @@ span {
     font-weight: 700;
 }
 
-footer li a {
+footer a {
     color: #003049;
+}
+
+h2 + button {
+    background-color: rgb(80, 197, 212);
+    font-size: 25px;
+}
+
+footer > a {
+    color: mediumslateblue;
 }
