--- a/CSS: The Box Model/1. Box Model/app.css
+++ b/CSS: The Box Model/1. Box Model/app.css
@@ -8,3 +8,27 @@ h1 {
     background-color: pink;
     width: 250px;
 }
+
+#one {
+    background-color: coral;
+    border-width: 5px;
+    border-color: brown;
+    border-style: solid;
+    box-sizing: border-box;
+}
+
+#two {
+    background-color: palevioletred;
+    border-color: rebeccapurple;
+    border-style: dashed;
+    border-width: 5px;
+    box-sizing: border-box;
+    border-bottom-color: aqua;
+}
+
+#three {
+    border: 5px solid tomato;
+    box-sizing: border-box;
+    border-bottom-width: 30px;
+    border-radius: 5% 0% 5% 0%;
+}
