--- a/CSS: The Box Model/1. Box Model/app.css
+++ b/CSS: The Box Model/1. Box Model/app.css
@@ -1,12 +1,15 @@
 div {
     width: 500px;
-    height: 250px;
     background-color: royalblue;
+    padding: 15px;
+    margin-bottom: 10px;
 }
 
 h1 {
     background-color: pink;
-    width: 250px;
+    width: 200px;
+    padding-left: 100px;
+    padding-top: 25px
 }
 
 #one {
@@ -31,4 +34,10 @@ h1 {
     box-sizing: border-box;
     border-bottom-width: 30px;
     border-radius: 5% 0% 5% 0%;
+}
+
+button {
+    padding: 10px 20px;
+    border: 2px solid coral;
+    border-radius: 5%;
 }
