--- a/CSS: The Box Model/1. Box Model/app.css
+++ b/CSS: The Box Model/1. Box Model/app.css
@@ -9,7 +9,17 @@ h1 {
     background-color: pink;
     width: 200px;
     padding-left: 100px;
-    padding-top: 25px
+    padding-top: 25px;
+    margin-bottom: 0;
+}
+
+span {
+    margin-left: 16px;
+
+}
+
+body {
+    margin: 0;
 }
 
 #one {
@@ -18,6 +28,7 @@ h1 {
     border-color: brown;
     border-style: solid;
     box-sizing: border-box;
+    margin-left: 50px;
 }
 
 #two {
@@ -40,4 +51,5 @@ button {
     padding: 10px 20px;
     border: 2px solid coral;
     border-radius: 5%;
+    margin-left: 150px;
 }
