--- a/CSS: The Box Model/3. CSS Units/app.css
+++ b/CSS: The Box Model/3. CSS Units/app.css
@@ -15,3 +15,26 @@ h1 {
     border: 2px solid royalblue;
     line-height: 200%;
 }
+
+h2 {
+    font-size: 1.5em;
+    margin: 1em;
+}
+
+h3 {
+    font-size: 1.25em;
+}
+
+article p {
+    font-size: 0.8em;
+}
+
+article {
+    font-size: 20px;
+}
+
+article button {
+    font-size: 1em;
+    padding: 0 1em;
+    border-radius: 0.5em;
+}
