--- a/CSS: Responsive CSS & Flexbox/Flexbox/app.css
+++ b/CSS: Responsive CSS & Flexbox/Flexbox/app.css
@@ -9,7 +9,8 @@ h1 {
 
 #container {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+    justify-content: space-evenly;
     background-color: #003049;
     width: 90%;
     height: 500px;
