--- a/CSS: Responsive CSS & Flexbox/Flexbox/app.css
+++ b/CSS: Responsive CSS & Flexbox/Flexbox/app.css
@@ -11,6 +11,7 @@ h1 {
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
+    flex-wrap: wrap;
     background-color: #003049;
     width: 90%;
     height: 500px;
