--- a/CSS: Responsive CSS & Flexbox/Flexbox/app.css
+++ b/CSS: Responsive CSS & Flexbox/Flexbox/app.css
@@ -13,6 +13,8 @@ h1 {
     justify-content: space-evenly;
     flex-wrap: wrap;
     align-items: center;
+    align-content: center;
+
     background-color: #003049;
     width: 90%;
     height: 500px;
@@ -23,4 +25,8 @@ h1 {
 #container div {
     width: 200px;
     height: 200px;
+}
+
+div:nth-of-type(3) {
+    align-self: flex-end;
 }
