--- a/CSS: Responsive CSS & Flexbox/Flexbox/app.css
+++ b/CSS: Responsive CSS & Flexbox/Flexbox/app.css
@@ -10,14 +10,14 @@ h1 {
 #container {
     display: flex;
     flex-direction: row;
-    justify-content: space-evenly;
+    justify-content: center;
     flex-wrap: wrap;
     align-items: center;
     align-content: center;
 
     background-color: #003049;
     width: 90%;
-    height: 500px;
+    /*height: 500px;*/
     margin: 0 auto;
     border: 5px solid #003049;
 }
@@ -25,8 +25,16 @@ h1 {
 #container div {
     width: 200px;
     height: 200px;
+    flex-basis: 200px;
+    flex-grow: 1;
+    max-width: 500px;
+    flex-shrink: 5;
+    min-width: 100px;
 }
 
-div:nth-of-type(3) {
-    align-self: flex-end;
+/*div:nth-of-type(1) {
+    flex-grow: 1;
 }
+div:nth-of-type(3) {
+    flex-grow: 1;
+}*/
