--- a/CSS: Responsive CSS & Flexbox/MediaQueries/app.css
+++ b/CSS: Responsive CSS & Flexbox/MediaQueries/app.css
@@ -10,8 +10,18 @@ h1 {
     font-weight: 100;
 }
 
+ul {
+    border: 2px solid black;
+    flex-grow: 1;
+    max-width: 50%;
+    display: flex;
+    justify-content: space-evenly;
+}
+
 nav {
     font-size: 1.5em;
+    display: flex;
+    justify-content: space-between;
 }
 
 /*
@@ -40,7 +50,7 @@ nav {
     }
 }
 */
-
+/*
 h1 {
     color: rgb(0, 0, 0);
 }
@@ -66,5 +76,26 @@ h1 {
 @media (orientation: landscape) {
     body {
         background-color: royalblue;
+    }
+}
+*/
+
+@media (max-width:768px) {
+    h1 {
+        font-size: 4em;
+    }
+    nav {
+        flex-direction: column;
+        align-items: center;
+    }
+    nav ul {
+        flex-direction: column;
+        align-items: center;
+    }
+}
+
+@media (max-width:576px) {
+    h1 {
+        font-size: 3.5em;
     }
 }
